syntax = "proto3";

package go.micro.srv.showdata;

service ShowData {
	rpc GetDataCrontab(TryRequest) returns (TryRespons) {}
}

message TryRequest {
	int64 flag = 1;
}

message TryRespons {
	repeated int64 Mem = 1;
	repeated int64 CPU = 2;
}